Introducing cardinal components Changed:  - Ripped out the old DataComponents system (kept timer components)  - Added Cardinal components as a JIJ dependency, will build upon the API more later

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ archives_base_name=nucleus
 
 # Dependencies
 fabric_version=0.89.1+1.20.2
+
+# Cardinal components API
+cardinal_components_version=5.4.0
