--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
-loader_version=0.14.22
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.1
+loader_version=0.15.0
 
 # Mod Properties
-mod_version=BETA-0.1.1
+mod_version=0.3.0-beta
 maven_group=net.insomniacs
 archives_base_name=nucleus
 
 # Dependencies
-fabric_version=0.89.1+1.20.2
+fabric_version=0.91.1+1.20.4
 
 # Cardinal components API
 cardinal_components_version=5.4.0
