--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.4-SNAPSHOT'
+	id 'fabric-loom' version '1.5-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -34,6 +34,7 @@ loom {
 		}
 	}
 
+	accessWidenerPath = file("src/main/resources/nucleus.accesswidener")
 }
 
 dependencies {
