--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,15 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+# Mod Properties
+mod_id=nucleus
+mod_version=0.3.2-beta
+mod_group=com.github.InsomniacsMods
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
+# Dependencies
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
 loader_version=0.15.6
-
-# Mod Properties
-mod_version=0.3.0-beta
-maven_group=net.insomniacs
-archives_base_name=nucleus
-
-# Dependencies
 fabric_version=0.95.4+1.20.4
-
-# Cardinal components API
 cardinal_components_version=5.4.0
+
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
