--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,11 @@
 pluginManagement {
 	repositories {
-		gradlePluginPortal()
-		maven { url "https://maven.fabricmc.net/" }
+		maven {
+			url 'https://maven.fabricmc.net/'
+			content { includeGroup "net.fabricmc" }
+			content { includeGroup "fabric-loom" }
+		}
+		mavenCentral()
 	}
 }
 rootProject.name = 'Nucleus'
