--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,22 @@ base { archivesName = mod_id }
 
 repositories {
 	maven {
+		url "https://api.modrinth.com/maven"
+		content { includeGroup "maven.modrinth" }
+	}
+	maven {
 		url 'https://maven.ladysnake.org/releases'
 		content { includeGroup "dev.onyxstudios.cardinal-components-api" }
 	}
 }
 
+fabricApi {
+	configureDataGeneration()
+}
+
 loom {
 	splitEnvironmentSourceSets()
-	accessWidenerPath.set file("src/main/resources/nucleus.accesswidener")
+	accessWidenerPath = file("src/main/resources/nucleus.accesswidener")
 
 	mods {
 		mod_id {
@@ -27,34 +35,50 @@ loom {
 			sourceSet sourceSets.test
 		}
 	}
+}
 
+sourceSets {
+	test {
+		runtimeClasspath += sourceSets.main.runtimeClasspath
+		compileClasspath += sourceSets.main.compileClasspath
+		runtimeClasspath += sourceSets.client.runtimeClasspath
+		compileClasspath += sourceSets.client.compileClasspath
+	}
+}
+
+loom {
 	runs {
-		testClient {
-			client()
+		client {
 			source sourceSets.test
 		}
-		testServer {
-			server()
+		server {
 			source sourceSets.test
+		}
+		datagen {
+			inherit server
+			name "Data Generation"
+			vmArg "-Dfabric-api.datagen"
+			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+			vmArg "-Dfabric-api.datagen.modid=${mod_id}"
+			runDir "build/datagen"
+
+			ideConfigGenerated true
 		}
 	}
 }
 
-sourceSets.test {
-	runtimeClasspath += sourceSets.main.runtimeClasspath
-	runtimeClasspath += sourceSets.client.runtimeClasspath
-	compileClasspath += sourceSets.main.compileClasspath
-	compileClasspath += sourceSets.client.compileClasspath
-}
-
 dependencies {
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	minecraft "com.mojang:minecraft:${minecraft_version}"
+	mappings "net.fabricmc:yarn:${minecraft_version}+${yarn_mappings}:v2"
+	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}+${minecraft_version}"
 
-	include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cardinal_components_version}")
-	include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_version}")
+	include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cardinal_components_version}")
+	include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}")
+
+	modLocalRuntime "maven.modrinth:modmenu:${modmenu_version}"
+	modLocalRuntime "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}"
+	modLocalRuntime "maven.modrinth:chrysalis:${chrysalis_version}"
 }
 
 processResources {
