--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,16 @@
-# Mod Properties
 mod_id=nucleus
 mod_version=0.3.2-beta
 mod_group=com.github.InsomniacsMods
 
-# Dependencies
 minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.6
-fabric_version=0.95.4+1.20.4
-cardinal_components_version=5.4.0
+yarn_mappings=build.3
+fabric_loader_version=0.15.7
+fabric_version=0.96.11
 
-# Done to increase the memory available to gradle.
+cardinal_components_version=5.4.0
+modmenu_version=9.0.0
+sodium_version=0.5.8
+chrysalis_version=0.3.3
+
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
