--- a/build.gradle
+++ b/build.gradle
@@ -68,14 +68,15 @@ dependencies {
 	minecraft "com.mojang:minecraft:${minecraft_version}"
 	mappings "net.fabricmc:yarn:${minecraft_version}+${yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}+${minecraft_version}"
+//	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}+${minecraft_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
 
 	include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cardinal_components_version}")
 	include modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cardinal_components_version}")
 
-	modLocalRuntime "maven.modrinth:modmenu:${modmenu_version}"
-	modLocalRuntime "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}"
-	modLocalRuntime "maven.modrinth:chrysalis:${chrysalis_version}"
+//	modLocalRuntime "maven.modrinth:modmenu:${modmenu_version}"
+//	modLocalRuntime "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}"
+//	modLocalRuntime "maven.modrinth:chrysalis:${chrysalis_version}"
 
 	testmodImplementation sourceSets.main.output
 	testmodImplementation sourceSets.client.output
