--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,12 @@ mod_id=nucleus
 mod_version=0.4.0-beta
 mod_group=com.github.InsomniacsMods
 
-minecraft_version=1.20.5-rc2
-yarn_mappings=build.2
+minecraft_version=1.20.5
+yarn_mappings=build.1
 fabric_loader_version=0.15.10
-fabric_version=0.97.5+1.20.5
+fabric_version=0.97.5
 
-cardinal_components_version=5.4.0
-modmenu_version=9.0.0
+modmenu_version=10.0.0-beta.1
 sodium_version=0.5.8
 chrysalis_version=0.3.3
 
