update to 1.20.6 (ugh)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 mod_id=nucleus
-mod_version=0.4.0-beta
+mod_version=0.5.0-beta
 mod_group=com.github.InsomniacsMods
 
-minecraft_version=1.20.5
+minecraft_version=1.20.6
 yarn_mappings=build.1
 fabric_loader_version=0.15.10
-fabric_version=0.97.5
+fabric_version=0.97.8
 
 modmenu_version=10.0.0-beta.1
 sodium_version=0.5.8
-chrysalis_version=0.3.3
+#chrysalis_version=0.3.3
 
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
