--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 mod_id=nucleus
 mod_version=1.0.0
-mod_group=com.github.InsomniacsMods
+maven_group=com.github.InsomniacsMods
 
 minecraft_version=1.20.6
 yarn_mappings=build.1
