--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,14 @@
 mod_id=nucleus
-mod_version=1.0.0
+mod_version=0.4.0
 maven_group=com.github.InsomniacsMods
 
-minecraft_version=1.20.6
-yarn_mappings=build.1
+minecraft_version=1.21
+yarn_mappings=build.2
 fabric_loader_version=0.15.11
-fabric_version=0.99.0
+fabric_version=0.100.3
 
-modmenu_version=10.0.0-beta.1
-sodium_version=0.5.8
-#chrysalis_version=0.3.3
+modmenu_version=11.0.0
+sodium_version=0.5.9
 
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
