--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id "fabric-loom" version "1.6-SNAPSHOT"
+	id "fabric-loom" version "1.7-SNAPSHOT"
 	id "maven-publish"
 }
 
@@ -83,6 +83,12 @@ processResources {
 
 java {
 	withSourcesJar()
+	withJavadocJar()
+}
+
+
+jar {
+	from("LICENSE")
 }
 
 publishing {
